fixed jumping on table resize-handler show

--- a/examples/Components/App/style.scss
+++ b/examples/Components/App/style.scss
@@ -92,8 +92,8 @@
         vertical-align: top;
         box-sizing: border-box;
         position: relative;
-        p {
-          margin: 0;
+        > * {
+          margin-bottom: 0;
         }
       }
       th {
